--- a/DjangoProjectBase/movie/templates/recommend.html
+++ b/DjangoProjectBase/movie/templates/recommend.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
-    <h2>Recomendador de películas</h2>
+    <h2>Recomendacion de películas</h2>
     <form method="post">
         {% csrf_token %}
         <div class="mb-3">
